--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,19 @@
-SA
+on: push
+name: 🚀 Deploy website on push
+jobs:
+  web-deploy:
+    environment: Movie
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v4
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      with:
+        server: ${{ secrets.WEB_DEPLOY_SERVER }}
+        username: ${{ secrets.WEB_DEPLOY_USERNAME }}
+        password: ${{ secrets.WEB_DEPLOY_PASSWORD }}
+        server-dir: ${{ secrets.WEB_SERVER_DIR }}
+        local-dir: ./bin/Release/net9.0/
